# occultation_light_curves

./: .SRCINFO  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  DartConfiguration.tcl  LICENSE  PKGBUILD  README.md  slc  slc-bin-2.3.0-1-x86_64.pkg.tar.zst  slc-bin-debug-2.3.0-1-x86_64.pkg.tar.zst
assets/: testing_simulation.h5
cli/: CMakeLists.txt  cli.ggo  cmdline.c  cmdline.h  main.c
occultation_simulator/: CMakeLists.txt  data_reader.c  data_reader.h  data_readers.c  data_readers.h  data_writers.c  data_writers.h  diffraction.c  diffraction.h  numpy.c  numpy.h  slcio.c  slcio.h
occultation_simulator/spectra/: a0i.h  a0iii.h  a0iv.h  a2i.h  a2v.h  a3iii.h  a3v.h  a7iii.h  b12iii.h  b1v.h  b2iv.h  b3i.h  b3iii.h  b3v.h  b57v.h  b5iii.h  b6iv.h  b9iii.h  extraerdatos.m  f0ii.h  f0v.h  f2iii.h  f8iv.h  fltopt.h  g0i.h  g0iii.h  g0v.h  g2v.h  g5ii.h  k01ii.h  k0iii.h  k0iv.h  k0v.h  k1iii.h  k2iii.h  k2v.h  k34ii.h  k3v.h  k4i.h  k4v.h  (+16 more)
src/: cli.ggo  cmdline.c  cmdline.h  diffraction.c  diffraction.h  listadat.txt  main.c  numpy.c  numpy.h  spectra.c  spectra.h
src/spectra/: ScoX1.h  a0v.h  a47iv.h  a5iii.h  a5v.h  a7v.h  b0i.h  b0v.h  b1i.h  b2ii.h  b5i.h  b5ii.h  b8i.h  b8v.h  b9v.h  f02iv.h  f0i.h  f0iii.h  f2ii.h  f2v.h  f5i.h  f5iii.h  f5iv.h  f5v.h  f6v.h  f8i.h  f8v.h  g0iv.h  g2i.h  g2iv.h  g5i.h  g5iii.h  g5iv.h  g5v.h  g8i.h  g8iii.h  g8iv.h  g8v.h  k1iv.h  k2i.h  (+19 more)
src/spectra/CVS/: Entries  Repository  Root
tests/: CMakeLists.txt  circle_object_provided_by_pupil_co.h5  contact_binary_provided_by_pupil_doble.h5  hello_test.c  hello_test.cc  simulator_test.c  tests.c  tests.h  your_test_executable[1]_include.cmake
